--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.compose.foundation:foundation-layout-android:1.8.1'
     def room_version = '2.7.1'
 
     implementation "androidx.room:room-runtime:$room_version"
